@@ -6,15 +6,15 @@ categories: [all, java]
 ---
 
 ## Overview
-객체 지향적 언어로 알려져 있는 Java에 함수형 언어로서의 지원이 추가된 Java8에 대해서 간략하고 전체적인 부분을 정리.
+객체 지향적 언어로 알려져 있는 Java에 함수형 언어로서의 지원이 추가된 Java8에 대해서 간략하고 전체적인 부분을 정리한다.
 
 ## New Features
 
 ### Lambda Expression (a.k.a Anonymous Method)
 
-자바의 람다 표현식의 근간은 '알론소 처치 (Alonzo Church)'가 1930년대에 람다 대수를 제안.  함수 정의, 함수 적용, 귀납적 함수를 추상화한 형식 체계! 자세한 사항은 [람다 대수 위키](https://ko.wikipedia.org/wiki/%EB%9E%8C%EB%8B%A4_%EB%8C%80%EC%88%98){:target="_blank"} 참조.
+자바의 람다 표현식의 근간은 '알론소 처치 (Alonzo Church)'가 1930년대에 람다 대수를 제안. 함수 정의, 함수 적용, 귀납적 함수를 추상화한 형식 체계! 자세한 사항은 [람다 대수 위키](https://ko.wikipedia.org/wiki/%EB%9E%8C%EB%8B%A4_%EB%8C%80%EC%88%98){:target="_blank"} 참조.
 
-쉽게 이해하자면, 자바에서는 익명 메소드 생성 문법을 지원한다는 정도로 이해하면 좋을 듯 하다.
+익명 메소드 생성 문법을 지원한다는 정도로 이해하면 좋을 듯 하다.
 
 **Java7**
 
@@ -34,8 +34,8 @@ new Thread(() -> {
 	System.out.println("Hello, World!");
 }).start();
 ```
-Java7의 경우, 쓰레드를 생성하고 익명 클래스를 구현하여 메소드를 오버라이딩하는 불필요한 코드가 많이 붙게 되는 것을 볼 수 있다.
-Java8의 경우, 람다 식으로 세련되게 코드를 작성할 수 있고, 본래 구현하고자 하였던 코드에 더 집중할 수 있게 됩니다. 추가적으로, '함수형 인터페이스' 를 구현하는 경우, 어떤 메소드를 오버라이드 하였는지도 명시할 필요가 없다. 함수형 인터페이스는 추후에 자세히 설명하도록 하겠다.
+기존 자바의 경우, 쓰레드 생성 후 익명 클래스를 구현하고, 메소드를 오버라이딩해야만 한다. 간단한 구현 조차 클래스 구현을 강요하고, 불필요한 코드를 양산하는 구조이다.
+람다 식으로 심플하게 코드를 작성할 수 있고, 본래 구현하고자 하였던 코드에 더 집중할 수 있게 된다. 추가적으로, '함수형 인터페이스' 를 구현하는 경우, 어떤 메소드를 오버라이드 하였는지도 명시할 필요가 없다. 함수형 인터페이스는 추후에 자세히 설명하도록 하겠다.
 
 **Java7**
 
@@ -56,7 +56,7 @@ theListOfMyClasses.sort((MyClass a, MyClass b) -> {
 
 theListOfMyClasses.sort((a, b) -> a.getValue() - b.getValue());
 ```
-람다 표현식에서 '타입 추론' 이 가능하여, 전달하는 파라미터의 타입을 명시하지 않아도 런타임에 추론이 가능해진다. 이로 인해, 불필요한 코드량을 줄일 수 있게 된다.
+람다 표현식에 '타입 추론' 이 가능하며, 전달하는 파라미터의 타입을 명시하지 않아도 런타임에 추론이 가능해진다. 명시적으로 선언하지 않아도 되므로, 코드량이 감소한다.
 
 ### Stream API
 
@@ -73,14 +73,16 @@ return guests.stream()
 	.collect(Collectors.toList());
 ```
 컨테이너로부터 스트림을 생성하고, 특정 company와 동일한 guest 객체만 필터링한 뒤에, guest.grade 값을 오름차순으로 정렬한 뒤에 guest의 이름만 추출하여 다시 리스트로 만드는 로직이다.
-기존의 for-each 문의로 작성하려고 하면, 코드량이 많아지고 복잡해질 수 있는 로직을 아주 깔끔하게 처리할 수 있게 되었다.
+기존의 for-each 문의로 작성하려고 하면 복잡해질 수 있는 부분이 단순해지며 명확해진다.
 
 ### Default Method
 
-경직된 자바 인터페이스 체계에서는 인터페이스의 메소드 추가 시, 하위의 모든 구현체에 영향을 미치게 됨. 인터페이스를 상속한 Concrete/Abstract Class의 어디선가는 꼭 구현을 해야함.
+경직된 자바 인터페이스 체계에서는 인터페이스의 메소드 추가 시, 하위의 모든 구현체에 영향을 미치게 된다. 인터페이스를 구현한 Concrete/Abstract Class의 어디선가는 꼭 오버라이딩을 해야한다.
 
-다양한 우회 기법을 활용하였음.
-- 헬퍼 클래스 활용 / 확장 인터페이스 추가 / 추상 클래스를 통한 확장 등...
+기존에는 다양한 우회 기법을 통해 해소하였다.
+1. 헬퍼 클래스 활용
+2. 확장 인터페이스 추가
+3. 추상 클래스를 통한 확장 등...
 
 ```java
 public interface Iterator<E> {
@@ -93,7 +95,7 @@ public interface Iterator<E> {
   }
 }
 ```
-forEachRemaining 메소드에 대한 구현이 상속 받은 클래스에서 구현을 강요하지 않음. 단, 오버라이딩을 통한 확장이 가능하도록 여지는 남겨놓았음.
+forEachRemaining 메소드에 대한 구현이 상속 받은 클래스에서 구현을 강요하지 않고, 오버라이딩을 통한 확장이 가능하도록 여지는 남겨놓았다.
 
 상속을 통한 구현이 인터페이스 기본 메소드보다 우선! (Override method > Default method)
 
@@ -195,6 +197,11 @@ public class JSR310Test {
 자바8에는 '@Repeatable' 어노테이션이 추가되었고, 어노테이션이 Context를 상속한다. 지역 변수, 제네릭 타입, 수퍼클래스와 인터페이스 구현체, 또한 메소드 Exception 정의까지 거의 모든것을 어노테이션으로 표현할 수 있다. 자세한 내용은 [4] 링크를 참조하자. ^^
 
 ```java
+@Retention(RetentionPolicy.RUNTIME)
+public @interface Filters {
+    Filter[] value();
+}
+
 @Target( ElementType.TYPE )
 @Retention( RetentionPolicy.RUNTIME )
 @Repeatable( Filters.class )
@@ -257,7 +264,63 @@ System.out.println(new String(asBytes, "utf-8"));
 
 ### Heap에서 Permanent Generation 제거
 
-* java.lang.OutOfMemoryError: PermGen 에러의 원흉... (각종 프레임워크와 개발자)
+java.lang.OutOfMemoryError: PermGen 에러 발생 원인. (PermGen의 힙 메모리는 GC가 되지 않는다. 원인은 주로, 무분별한 Static 변수 + HotSwap 으로 인한 PermGen 메모리 누수)
+
+#### Changed JVM Options
+
+PermGen 관련 JVM 옵션이 Ignore 처리 되었고, 새로운 JVM 옵션이 추가되었다.
+
+* 제거된 JVM Options
+
+```bash
+-XX:PermSize # JVM 기동 시, PermGen 영역 사이즈
+
+-XX:MaxPermSize # PermGen 영역 최대 사이즈
+```
+
+* 추가된 JVM Options
+
+```bash
+-XX:MetaspaceSize # JVM 기동 시, Metaspace 영역 사이즈
+
+-XX:MaxMetaspaceSize # Metaspace 영역 최대 사이즈 (설정하지 않으면, JVM이 자동으로 조절)
+
++@ -XX:MinMetaspaceFreeRatio # Metaspace 최소 용량 비율
+
++@ -XX:MaxMetaspaceFreeRatio # Metaspace 최대 용량 비율
+```
+
+#### PermGen to Metaspace
+
+자세한 변경 사항은 [7] 링크에 정리된 내용을 참조하자.
+
+간략하게 요약하면, 아래와 같다.
+
+__Java7 까지의 Permanent__
+
+1. Class 의 Meta정보 (pkg path 정보라고 보면 됨, text 정보)
+2. Method의 Meta 정보
+3. Static Object
+4. 상수화된 String Object
+5. Class와 관련된 배열 객체 Meta 정보
+6. JVM 내부적인 객체들과 최적화컴파일러(JIT)의 최적화 정보
+
+__Java8 에서의 Metaspace과 Heap 분리__
+
+1. Class 의 Meta정보 -> Metaspace 영역으로 이동
+2. Method의  Meta 정보 -> Metaspace 영역으로 이동
+3. Static Object -> Heap 영역으로 이동
+4. 상수화된 String Obejct -> Heap 영역으로 이동
+5. 클레스와 관련된 배열 객체 Meta 정보 -> Metaspace 영역으로 이동
+6. JVM 내부적인 객체들과 최적화컴파일러(JIT)의 최적화 정보 -> Metaspace 영역으로 이동
+
+정리하자면,
+
+* 힙 영역이 기존에 __New / Survive / Old / Perm / Native__ 에서 __New / Survive / Old / Metaspace__ 로 구조가 변경됨.
+
+* PermGen 영역에 저장되어 문제를 유발하던 Static Obect는 Heap 영역으로 옮겨서 최대한 GC 대상이 되도록 함. (Static Final 인 경우는 어쩔 수 없음...)
+
+* 수정될 필요가 없는 정보만 Metaspace에 저장, Metaspace는 JVM이 필요에 따라서 리사이징할 수 있는 구조로 개선되었음.
 
 ## References
 [1] [Java 8 개선 사항 관련 글 모음](http://blog.fupfin.com/?p=27){:target="_blank"}
@@ -272,4 +335,6 @@ System.out.println(new String(asBytes, "utf-8"));
 
 [6] [StampedLock 성능 비교](http://blog.takipi.com/java-8-stampedlocks-vs-readwritelocks-and-synchronized/)
 
-[6] [Java 8 New I/O API](https://blog.jooq.org/2014/01/24/java-8-friday-goodies-the-new-new-io-apis/)
+[6] [Java8 New I/O API](https://blog.jooq.org/2014/01/24/java-8-friday-goodies-the-new-new-io-apis/)
+
+[7] [Java8 PermGen to Metaspace](https://dzone.com/articles/java-8-permgen-metaspace)
